# agbsum

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Makefile  README.txt
agbsum/: CMakeLists.txt
agbsum/include/: agbsum.h
agbsum/src/: calc.c  chkpar.c  chkparams.c  exi.c  exit.c  getsum.c  help.c  hlp.c  inidat.c  initdat.c  main.c  open.c  opn.c  pat.c  rd.c  red.c
include/: agbsum.h
source/: checkParams.c  copyright.c  exit.c  getSum.c  help.c  initData.c  main.c  open.c  patch.c  read.c
src/: chkpar.c  cpy.c  exi.c  getsum.c  hlp.c  inidat.c  main.c  opn.c  pat.c  red.c
